fixed wrapping of long questions so the bottom of the first line didn't overlap the top of the second.

--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -101,3 +101,8 @@ div.new-question {
     border: 1px solid #ccc;
     padding: 2px;
 }
+
+h1 {
+    line-height:1.1em;
+    font-size:2em;
+}
